Release history for {{ $dist->name }}:

{{$NEXT}}

v0.1.0    2025-08-18 21:31:01+01:00 Europe/London
  - Initial prototype published on CPAN.