@@ -1,0 +1,80 @@
+name: linux
+
+on:
+  push:
+    branches:
+      - "*"
+    tags-ignore:
+      - "*"
+  pull_request:
+
+jobs:
+
+  ubuntu:
+    runs-on: ubuntu-latest
+
+    env:
+      PERL_USE_UNSAFE_INC: 0
+      AUTHOR_TESTING: 1
+      AUTOMATED_TESTING: 1
+      RELEASE_TESTING: 1
+      PERL_CARTON_PATH: $GITHUB_WORKSPACE/local
+
+    steps:
+      - uses: actions/checkout@v4
+      - run: perl -V
+      - name: Install Dependencies
+        uses: perl-actions/install-with-cpm@v1
+        with:
+          cpanfile: "cpanfile"
+      - run: prove -lr t
+
+  perl-versions:
+    runs-on: ubuntu-latest
+    name: List Perl versions
+    outputs:
+      perl-versions: ${{ steps.action.outputs.perl-versions }}
+    steps:
+      - id: action
+        uses: perl-actions/perl-versions@v1
+        with:
+          since-perl: v5.20
+          with-devel: true
+
+  perl:
+    runs-on: ubuntu-latest
+    name: "Perl ${{ matrix.perl-version }}"
+
+    needs:
+      - ubuntu
+      - perl-versions
+
+    env:
+      PERL_USE_UNSAFE_INC: 0
+      AUTHOR_TESTING: 1
+      AUTOMATED_TESTING: 1
+      RELEASE_TESTING: 1
+      PERL_CARTON_PATH: $GITHUB_WORKSPACE/local
+
+    strategy:
+      fail-fast: false
+      matrix:
+        perl-version: ${{ fromJson (needs.perl-versions.outputs.perl-versions) }}
+
+    container: perldocker/perl-tester:${{ matrix.perl-version }}
+
+    steps:
+      - uses: actions/checkout@v4
+      - run: perl -V
+      - name: Install Dependencies
+        run: cpm install -g --show-build-log-on-failure
+      - run: prove -lr t
+      - name: Install All Dependencies
+        run: cpm install -g --with-all --show-build-log-on-failure
+      - run: prove -lr t xt
+
+  dzil-build-and-test:
+     name: Dist::Zilla build and test
+     uses: rjbs/dzil-actions/.github/workflows/dzil-matrix.yaml@main
+     with:
+       install-dzil-from-cpan: true
